<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cecilerobertm.amp.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Postal Rate Calculator"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/length_text"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="Length (mm): "
        android:layout_marginTop="40dp"
        android:layout_marginLeft="12dp"
        android:textSize="15dp"
        android:textColor="@android:color/black"
        android:layout_below="@id/title"/>

    <EditText
        android:id="@+id/length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/length_text"
        android:layout_marginTop="24dp"
        android:layout_below="@id/title"
        android:layout_marginLeft="20dp" />

    <TextView
        android:id="@+id/width_text"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="Width (mm): "
        android:layout_marginTop="40dp"
        android:layout_marginLeft="12dp"
        android:textSize="15dp"
        android:textColor="@android:color/black"
        android:layout_below="@id/length"/>

    <EditText
        android:id="@+id/width"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/length_text"
        android:layout_marginTop="24dp"
        android:layout_below="@id/length"
        android:layout_marginLeft="20dp" />

    <TextView
        android:id="@+id/weight_text"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="Weight (g): "
        android:layout_marginTop="40dp"
        android:layout_marginLeft="12dp"
        android:textSize="15dp"
        android:textColor="@android:color/black"
        android:layout_below="@id/width"/>

    <EditText
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/length_text"
        android:layout_marginTop="24dp"
        android:layout_below="@id/width"
        android:layout_marginLeft="20dp" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Non-Standard Envelope   "
        android:id="@+id/switch_standard"
        android:layout_below="@+id/weight_text"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="12dp"/>

    <TextView
        android:id="@+id/result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="40dp"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"
        android:layout_below="@id/switch_standard"/>

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:text="Get Rate"
        android:onClick="buttonClick"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"
        />

</RelativeLayout>
